<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="18dp"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="18dp">

            <TextView
                android:id="@+id/setting_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/settings"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <Spinner
                android:id="@+id/age_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:entries="@array/age"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/setting_tv">
            </Spinner>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/age_spinner">

                <ImageView
                    android:id="@+id/iv_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/iv_notif"
                    android:src="@drawable/ic_notifications_black_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/notification"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/iv_notif"
                    app:layout_constraintStart_toEndOf="@id/iv_notif"
                    app:layout_constraintTop_toTopOf="@id/iv_notif" />

                <TextView
                    android:id="@+id/tv_notif_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notif_desc"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@id/tv_notif"
                    app:layout_constraintTop_toBottomOf="@id/iv_notif" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_notif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_notif" />

                <ImageButton
                    android:id="@+id/btn_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:src="@drawable/ic_baseline_access_time_24"
                    app:layout_constraintStart_toStartOf="@+id/iv_notif"
                    app:layout_constraintTop_toBottomOf="@+id/tv_notif_desc" />

                <TextView
                    android:id="@+id/selecttime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/set_notification_time"
                    app:layout_constraintStart_toEndOf="@+id/btn_time"
                    app:layout_constraintTop_toTopOf="@+id/btn_time"
                    app:layout_constraintBottom_toBottomOf="@id/btn_time"/>

                <Button
                    android:id="@+id/setNot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_time"
                    app:layout_constraintBottom_toBottomOf="@id/btn_time"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notification">

                <ImageView
                    android:id="@+id/iv_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/iv_alarm"
                    android:src="@drawable/ic_baseline_access_alarm_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/alarm"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_alarm"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.487" />

                <TextView
                    android:id="@+id/tv_alarm_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarm_desc"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@id/tv_alarm"
                    app:layout_constraintTop_toBottomOf="@id/tv_alarm" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textAlignment="center"
                android:textSize="12sp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alarm">
            </TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>