<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/blue"
        android:icon="@drawable/ic_baseline_access_alarm_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_profile"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/blue"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_profile"
        />
</menu>